<?xml version="1.0"?>
<package>
  <name>robot_model_to_pointcloud</name>
  <version>1.0.0</version>
  <description>The robot_model_to_pointcloud package converts a robotModel to a pointcloud (by reading the meshes)</description>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>


  <export>
  </export>
</package>
